--- a/guestbook/rollout.yaml
+++ b/guestbook/rollout.yaml
@@ -1,35 +1,37 @@
+# This example demonstrates a Rollout which performs background analysis while the Rollout is updating.
+#
+# Prerequisites:
+# * kubectl apply -f analysis-templates.yaml
+#
 apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
-  name: rollouts-demo
+  name: rollout-background-analysis
 spec:
-  replicas: 2
-  strategy:
-    canary:
-      steps:
-      - setWeight: 20
-      - pause: {}
-      - setWeight: 40
-      - setWeight: 60
-      - setWeight: 80
-      - pause: {duration: 10}
+  replicas: 4
   revisionHistoryLimit: 2
   selector:
     matchLabels:
-      app: rollouts-demo
+      app: rollout-background-analysis
   template:
     metadata:
       labels:
-        app: rollouts-demo
+        app: rollout-background-analysis
     spec:
       containers:
       - name: rollouts-demo
         image: argoproj/rollouts-demo:blue
+        imagePullPolicy: Always
         ports:
-        - name: http
-          containerPort: 8080
-          protocol: TCP
-        resources:
-          requests:
-            memory: 32Mi
-            cpu: 5m
+        - containerPort: 8080
+  strategy:
+    canary:
+      # An AnalysisTemplate is referenced here, which starts an AnalysisRun as soon as the update
+      # begins. The run is terminated when the update completes. A failure/error of the analysis
+      # will cause the rollout's update to abort, and set the canary weight to zero.
+      analysis:
+        templates:
+        - templateName: random-fail
+      steps:
+      - setWeight: 25
+      - pause: {duration: 10}
