--- a/guestbook/rollout.yaml
+++ b/guestbook/rollout.yaml
@@ -31,7 +31,7 @@ spec:
       # will cause the rollout's update to abort, and set the canary weight to zero.
       analysis:
         templates:
-        - templateName: random-fail
+        - templateName: fail
       steps:
       - setWeight: 25
       - pause: {duration: 10}
