--- a/guestbook/rollout.yaml
+++ b/guestbook/rollout.yaml
@@ -34,4 +34,10 @@ spec:
         - templateName: fail
       steps:
       - setWeight: 25
+      - pause: {duration: 2}
+      - setWeight: 50
+      - pause: {duration: 2}
+      - setWeight: 75
+      - pause: {duration: 2}
+      - setWeight: 100
       - pause: {duration: 10}
