--- a/guestbook/rollout.yaml
+++ b/guestbook/rollout.yaml
@@ -34,10 +34,10 @@ spec:
         - templateName: fail
       steps:
       - setWeight: 25
-      - pause: {duration: 2}
+      - pause: {duration: 2m}
       - setWeight: 50
-      - pause: {duration: 2}
+      - pause: {duration: 2m}
       - setWeight: 75
-      - pause: {duration: 2}
+      - pause: {duration: 2m}
       - setWeight: 100
-      - pause: {duration: 10}
+      - pause: {duration: 10m}
